--- a/folders/css/proyecto.css
+++ b/folders/css/proyecto.css
@@ -1,24 +1,20 @@
-.top-bar-section ul li:hover > a {
-    background: #ff7800;
-    color: white; 
+.header{
+	background: url('../images/header1.jpg') no-repeat;
+	background-size: 100%;
+	height: 100%;
+	margin-top: -92px;
+	z-index: -1;	
+	color: white;
+	font-size: 30px;
 }
 
-ul.title-area li.active {
-    background: #ff7800;
-    color: white; 
+.header-content-inner{
+	height: 550px;
+	padding-top: 200px;
+	color: white;
 }
 
-.pagination{
-	text-align: center;
-}
-ul.pagination li.current{
-	background: #ff7800;
+.navbar{
+	z-index: 10;
 }
 
-ul.pagination li.current a {
-	background: #ff7800;
-}
-
-ul.pagination li.current a:hover {
-	background: #ff7800;
-}
